# bikeaction.org

./: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
cms/: models.py
cms/migrations/: 0019_alter_cmsstreampage_body_alter_postpage_body.py
cms/templates/blocks/: button_block.html
emailblasts/: admin.py  apps.py  forms.py  models.py  targeting.py  tasks.py  tests.py  urls.py  utils.py  views.py
emailblasts/migrations/: 0001_initial.py  0002_alter_emailblast_status_emailblastdelivery.py  0003_alter_emailblasttargetnode_primitive_type.py  0004_emailblastimage.py  0005_alter_emailblasttargetnode_primitive_type.py
emailblasts/templates/emailblasts/: email_blast_list.html  email_draft.html  email_draft_preview.html  email_draft_review.html
events/: signin_cookie.py  tests.py  views.py
events/templates/: signin.html
events/templates/events/: scheduledevent_detail.html  scheduledevent_list.html
lazer/: tasks.py
lazer_app/projectLazer/: Dockerfile  package-lock.json  package.json
neighborhood_selection/: tasks.py
organizers/: tasks.py  urls.py  views.py
pba_discord/: README.md  tests.py
pba_discord/components/: neighborhood_selection.py
pba_discord/management/commands/: setup_discord.py
pbaabp/: email.css  email.py  forms.py  middleware.py  settings.py  urls.py  views.py
pbaabp/management/commands/: send_27th_ward_committeepeople.py  send_d1_follow_up_2025_05.py  send_germantown_ave_bike_lane.py  send_old_richmond_civic_may_26.py
profiles/: admin.py  models.py  tasks.py
profiles/migrations/: 0024_alter_profile_options.py
profiles/templates/profiles/: profile_detail.html
projects/: tasks.py  tests.py  urls.py  views.py
static/css/: pba.css
templates/account/: email.html
templates/email/27th-ward-committeepeople/: body.txt
templates/email/d1-follow-up-2025-05/: body.txt  subject.txt
templates/email/germantown-ave-bike-lane/: body.txt  subject.txt
(+2 files in other folders)
